test/classes/delete-free/delete-borrowed.good
delete-borrowed.chpl:6: error: 'delete' can only be applied to unmanaged classes
