test/classes/delete-free/delete-borrowed.chpl
class MyClass {
  var field:int;
}

var x = new borrowed MyClass(1);
delete x;
